--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 certifi==2019.9.11
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==1.11
 django-forms-bootstrap==3.1.0
 idna==2.8
 Pillow==6.1.0
+psycopg2-binary==2.8.3
 pytz==2019.2
 requests==2.22.0
 stripe==2.37.1
